--- a/templates/haproxy.cfg.j2
+++ b/templates/haproxy.cfg.j2
@@ -1,11 +1,8 @@
 global
-  log /dev/log local0
-  log /dev/log local1 notice
-  chroot /var/lib/haproxy
-  stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
-  stats timeout 30s
-  user haproxy
-  group haproxy
+  log stdout format raw daemon
+  log stderr format raw daemon notice
+  user root
+  group root
   daemon
 
   # Default SSL material locations
